--- a/style.css
+++ b/style.css
@@ -1,28 +1,135 @@
+/* Color Palette link: https://colorhunt.co/palette/206727 */
+body {
+  background-color: #00587a;
+  color: #e7e7de;
+  font-family: 'Rubik', Arial, sans-serif;
+  font-weight: 300;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
 /* Header */
+header {
+  padding: 8px;
+}
 
 .dark-mode {
   background-color: black;
-  color: white;
+  color: #ECEFF1;
 }
-
 
 #darkModeBtn {
-    position: absolute;
-    right: 0;
-    margin-right: 8px;
-}
-
-#siteName {
-    text-align: center;
+  position: relative;
+  float: right;
+  background-color: #546E7A;
+  color: #ECEFF1;
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  font-family: 'Montserrat', sans-serif;
+  display: none;
 }
 
 #siteName h1 {
-    display: inline-block;
+  display: inline-block;
+}
+
+/* Nav */
+#mainMenuList {
+  text-align: right;
+  margin: 0;
+}
+
+nav#mainMenu {
+  display: inline-block;
+  float: right;
+}
+
+nav li {
+  display: inline-block;
+  padding: 0 5px;
+}
+
+nav li a {
+  color: #e7e7de;
+}
+
+nav li a:hover {
+  /* font-weight: 400; */
+  color: #fff;
+}
+
+.navbar-toggler {
+    border: none;
+}
+
+/* Main Section */
+
+#siteIntro {
+    text-align: center;
+    padding: 60px 20px;
+}
+
+#siteIntro p {
+    font-size: 2.4rem;
+}
+
+.homeSection {
+  text-align: center;
+  /* box-shadow: 0px 2px 3px 0px rgba(57, 62, 70, 0.2); */
 }
 
 
+/* #solutions .homeSectionPcontainer {
+    border-top: 100px solid #008891;
+}
+
+#clients .homeSectionPcontainer {
+    border-top: 100px solid #3490de;
+}
+
+#portfolio .homeSectionPcontainer {
+    border-top: 100px solid #48466d;
+}
+
+#contactme .homeSectionPcontainer {
+    border-top: 100px solid #00adb5;
+}
+
+#clients.homeSection, #portfolio.homeSection, #contactme.homeSection {
+    margin-top: -28px;
+} */
+
+/* .homeSectionPcontainer p {
+    margin-top: -50px;
+    color: #fff;
+} */
+
+.homeSection p {
+  font-size: 1.7rem;
+  font-weight: 500;
+  text-align: center;
+}
+
 /* Footer */
+footer {
+  background-color: #0f3057;
+  color: #e7e7de;
+  padding: 20px 0;
+}
 
 #copyright {
-    text-align: center;
+  text-align: center;
+}
+
+
+/* Media queries */
+
+@media (min-width: 1200px) {
+  .container, .container-lg, .container-md, .container-sm, .container-xl {
+      max-width: 1440px;
+  }
 }
