--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 /* Color Palette link: https://colorhunt.co/palette/206727 */
 body {
-  background-color: #00587a;
   color: #e7e7de;
   font-family: 'Rubik', Arial, sans-serif;
   font-weight: 300;
@@ -80,6 +79,17 @@ nav li a:hover {
 .homeSection {
   text-align: center;
   /* box-shadow: 0px 2px 3px 0px rgba(57, 62, 70, 0.2); */
+}
+
+.imgContainer {
+    width: 100%;
+    margin-top: 0%;
+}
+
+img {
+    vertical-align: middle;
+    border-style: none;
+    width: 100%;
 }
 
 
